--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-app-olmap {
+app-olmap, app-chart {
   display: block;
+  position: relative;
   width: 100%;
-  height: 500px;
+  height: 100%;
+  z-index: 9999;
 }
