fix(ui): add missing totalByPipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,14 @@
       <ion-content>
         <ion-list>
           <ion-item
-          (click)="handleActions({type: 'openModal', payload: item})"
-          *ngFor="let item of datas$|async|groupBy: 'Country_Region'; let i = index">
+            (click)="handleActions({type: 'openModal', payload: item})"
+            *ngFor="let item of datas$|async|groupBy: 'Country_Region'; let i = index">
           <ion-chip slot="start">
             {{i + 1}}
           </ion-chip>
           {{item?.key}}
           <ion-badge slot="end">
-            {{item?.totalConfirmed}}
+            {{item?.value|totalBy:'Confirmed'}}
           </ion-badge>
         </ion-item>
         </ion-list>
