--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,14 +18,22 @@
         </ion-list>
       </ion-content>
     </ion-menu>
+    
     <!-- the main content -->
-    <!-- <ion-router-outlet id="main"></ion-router-outlet> -->
-    <ion-content id="main">
-      <app-olmap
-          #map
-          [data]="datas$|async|groupBy: 'Country_Region'"
-          [options]="{radiusMarkerKey: 'Confirmed', zoom: 6}"
-          (action)="handleActions($event)"></app-olmap>
-    </ion-content>
+    <ion-router-outlet id="main">
+      <ion-header translucent="true">
+        <ion-toolbar>
+          <ion-menu-button slot="start"></ion-menu-button>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content fulscreen="true">
+        <app-olmap
+            #map
+            [data]="datas$|async|groupBy: 'Country_Region'"
+            [options]="{radiusMarkerKey: 'Confirmed', zoom: 6}"
+            (action)="handleActions($event)"></app-olmap>
+      </ion-content>      
+    </ion-router-outlet>
+
   </ion-split-pane>
 </ion-app>
