--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,11 @@ app-olmap, app-chart {
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+ion-toolbar {
+  --background: transparent no-repeat fixed center;
+  position: absolute;
+  top: 0;
   z-index: 9999;
 }
